--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>ecosolution</title>
   </head>
   <body>
+    <!-- Modal Portal -->
+    <div id="modal-root"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
